--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Spotify</title>
     <script src="js/jquery.min.js"></script>
-    <script src="js/chart.js"></script>
+    <script src="js/Chart.js"></script>
     <script src="js/spotify-chart.js"></script>
   <body>
     <h1>Ten most popular songs for Elvis Presley</h1>
